[gd_scene load_steps=2 format=3 uid="uid://8ff544j0ltvt"]

[ext_resource type="Script" path="res://addons/htn_editor/TaskButtons.gd" id="1_vvt5r"]

[node name="TaskButtons" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vvt5r")

[node name="Delete" type="Button" parent="."]
layout_mode = 2
text = " - "

[node name="OpenTask" type="Button" parent="."]
layout_mode = 2
text = "task_name"

[node name="NameEdit" type="TextEdit" parent="."]
visible = false
layout_mode = 2
placeholder_text = "task_name"

[connection signal="pressed" from="Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="OpenTask" to="." method="_on_open_task"]
